Notes pour l'introduction

--- a/index.html
+++ b/index.html
@@ -39,9 +39,43 @@
   <body>
 	<div class="reveal">
 	  <div class="slides">
-            <section><h1>Herp</h1></section>
-	    <section><h1>De</h1></section>
-	    <section><h1>Derp</h1></section>
+
+
+
+	    <section>
+	      <aside class="notes">
+		<ul>
+		  <li>Calendrier</li>
+		  <li>Integralite de existance terre <em>4.6 milliards
+		  d'année compressé en 365 jours : 145 année la
+		  seconde </em> => calendrier</li>
+		  <li>
+		    Mettons quelques informations : 
+		    <ul>
+		      <li>Apparitions de la vie : 27 mars</li>
+		      <li>Apparitions des animaux : 8 novembre</li>
+		      <li>Apparition des premiers humanoïde : 31
+		      décembre a midi</li>
+		      <li>Deux guerres mondiales : Dernière seconde</li>
+		    </ul>
+		  </li>
+		</ul>
+	      </aside>
+	    </section>
+
+	    <section>
+	      <aside class="note">
+		<ul>
+		  <li>Travail des géochronologistes : determiner l'âge
+		  d'objets terrestres</li>
+		  <li>Projet Topsoil : Génèrer des schémas pour
+		  géochronologistes</li>
+		  <li>Laboratoire CIRDLES</li>
+		  <li>12 avril => Aujourd'hui</li>
+		  <li>Chef : Dr. Jim Bowring | Partenaire : John Zeringue</li>
+		</ul>
+	      </aside>
+	    </section>
 	  </div>
 	</div>
   </body>
