Outlining of the XML

--- a/index.html
+++ b/index.html
@@ -18,66 +18,66 @@
     <link rel="stylesheet"
 	  href="http://cdn.jsdelivr.net/reveal.js/2.6.2/css/theme/default.css"
 	  id="theme"/>
-    	<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/2.6.2/lib/css/zenburn.css">
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/2.6.2/lib/css/zenburn.css"/>
 
     <!--[if lt IE 9]>
 	<script src="lib/js/html5shiv.js"></script>
 	<![endif]-->
     
     <script src="http://cdn.jsdelivr.net/reveal.js/2.6.2/lib/js/head.min.js"></script>
-  <script src="http://cdn.jsdelivr.net/reveal.js/2.6.2/js/reveal.min.js"></script>
-  <script>
+    <script src="http://cdn.jsdelivr.net/reveal.js/2.6.2/js/reveal.min.js"></script>
+    <script>
       window.onload = function(){
-      	Reveal.initialize({history: true,
-	center: true,
-	width:1920,
-	height : 1080});
-	}
-  </script>
+      Reveal.initialize({history: true,
+      center: true,
+      width:1920,
+      height : 1080});
+      }
+    </script>
   </head>
 
   <body>
-	<div class="reveal">
-	  <div class="slides">
+    <div class="reveal">
+      <div class="slides">
 
 
 
-	    <section>
-	      <aside class="notes">
+	<section>
+	  <aside class="notes">
+	    <ul>
+	      <li>Calendrier</li>
+	      <li>Integralite de existance terre <em>4.6 milliards
+	      d'année compressé en 365 jours : 145 année la
+	      seconde </em> => calendrier</li>
+	      <li>
+		Mettons quelques informations : 
 		<ul>
-		  <li>Calendrier</li>
-		  <li>Integralite de existance terre <em>4.6 milliards
-		  d'année compressé en 365 jours : 145 année la
-		  seconde </em> => calendrier</li>
-		  <li>
-		    Mettons quelques informations : 
-		    <ul>
-		      <li>Apparitions de la vie : 27 mars</li>
-		      <li>Apparitions des animaux : 8 novembre</li>
-		      <li>Apparition des premiers humanoïde : 31
-		      décembre a midi</li>
-		      <li>Deux guerres mondiales : Dernière seconde</li>
-		    </ul>
-		  </li>
+		  <li>Apparitions de la vie : 27 mars</li>
+		  <li>Apparitions des animaux : 8 novembre</li>
+		  <li>Apparition des premiers humanoïde : 31
+		  décembre a midi</li>
+		  <li>Deux guerres mondiales : Dernière seconde</li>
 		</ul>
-	      </aside>
-	    </section>
+	      </li>
+	    </ul>
+	  </aside>
+	</section>
 
-	    <section>
-	      <aside class="note">
-		<ul>
-		  <li>Travail des géochronologistes : determiner l'âge
-		  d'objets terrestres</li>
-		  <li>Projet Topsoil : Génèrer des schémas pour
-		  géochronologistes</li>
-		  <li>Laboratoire CIRDLES</li>
-		  <li>12 avril => Aujourd'hui</li>
-		  <li>Chef : Dr. Jim Bowring | Partenaire : John Zeringue</li>
-		</ul>
-	      </aside>
-	    </section>
-	  </div>
-	</div>
+	<section>
+	  <aside class="note">
+	    <ul>
+	      <li>Travail des géochronologistes : determiner l'âge
+	      d'objets terrestres</li>
+	      <li>Projet Topsoil : Génèrer des schémas pour
+	      géochronologistes</li>
+	      <li>Laboratoire CIRDLES</li>
+	      <li>12 avril => Aujourd'hui</li>
+	      <li>Chef : Dr. Jim Bowring | Partenaire : John Zeringue</li>
+	    </ul>
+	  </aside>
+	</section>
+      </div>
+    </div>
   </body>
 
 
