Ajout des commentaires pour un sommaire

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     <div class="reveal">
       <div class="slides">
 
-
+	<section>
+	  <aside class="notes">
+	    Sommaire
+	  </aside>
+	</section>
 
 	<section>
 	  <aside class="notes">
