Creation de la partie contexte

--- a/index.html
+++ b/index.html
@@ -80,6 +80,100 @@
 	    </ul>
 	  </aside>
 	</section>
+
+	<section>
+	  <aside class="notes">
+	    <ul>
+	      <li>Eruption de volcan.</li>
+	      <ul>
+		<li>De la lave en sort</li>
+		<li>Mais aussi des Zircons</li>
+	      </ul>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Zircon :</p>
+	    <ul>
+	      <li>Capsule : une fois construit, plus rien n'en sort</li>
+	      <li>Bourré d'uranium</li>
+	    </ul>
+	  </aside>
+	</section>
+	
+	<section>
+	  <aside class="notes">
+	    <p>Temps passe</p>
+	    <ul>
+	      <li>De nouvelles couche terrestres se forment</li>
+	      <li>Inside zircon : Uranium => plomb</li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Scientifiques deterrent les zircons. calculent le rapport entre plomb et uranium.</p>
+	    <p>=> AGE DE LA COUCHE TERRESTRE</p>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Topsoil :</p>
+	    <ul>
+	      <li>Remplacant d'Isoplot
+		<ul>
+		  <li>Vieux plug-in d'Excel</li>
+		  <li>Plus mis à jour, fonctionne que sur de vieilles machines</li>
+		  <li>Non intégrable</li>
+		</ul>
+	      </li>
+	      <li>Sert à tracer des schémas pour les géochronologistes</li>
+	      <li>Doit être utilisable pour un grand nombre de schemas</li>
+	      <li>... dans un grand nombre de context (logiciel+librairie)</li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Pour l'instant, permet de tracer CE genre de schema</p>
+	    <ul>
+	      <li>Axe X : Le rapport entre deux isotop d'uranium et de plomb</li>
+	      <li>Axe Y : Pareil</li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Un ellipse</p>
+	    <ul>
+	      <li>Represente une zone où le ratio entre les deux rapports peut etre</li>
+	      <li>Si les rapports étaient exacts : Point.</li>
+	      <li>Les deux rapports =>Estimés</li>
+	      <li>Donc on a une zone</li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Ligne concordia</p>
+	    <ul>
+	      <li>Represente le temps</li>
+	      <li>Plusieurs sortes : Whetherill/<!-- Se renseigner --></li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <p>Afin de produire ce genre de graphique, on a besoin de ce genre de tableaux</p>
+	</section>
+
       </div>
     </div>
   </body>
