Correction de note vers notes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</section>
 
 	<section>
-	  <aside class="note">
+	  <aside class="notes">
 	    <ul>
 	      <li>Travail des géochronologistes : determiner l'âge
 	      d'objets terrestres</li>
