Ajout de titres

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	  </aside>
 	</section>
 
+	<!-- Introduction -->
 	<section>
 	  <aside class="notes">
 	    <ul>
@@ -80,6 +81,8 @@
 	    </ul>
 	  </aside>
 	</section>
+
+	<!-- Explication du contexte -->
 
 	<section>
 	  <aside class="notes">
