Ajout de asside autour de notes

--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
 	</section>
 
 	<section>
-	  <p>Afin de produire ce genre de graphique, on a besoin de ce genre de tableaux</p>
+	  <aside class="notes">
+	    <p>Afin de produire ce genre de graphique, on a besoin de ce genre de tableaux</p>
+	  </aside>
 	</section>
 
       </div>
