--- a/index.html
+++ b/index.html
@@ -313,8 +313,48 @@
 	    <p>Propiete trouvee : Commenter le before after</p>
 	  </aside>
 	</section>
+	
+	<!-- FXML -->
+	<section>
+	  <aside class="notes">
+	    <p>Apres exploration documentation de Java FX : trouvé
+	    FXML.</p>
+	    <p>REFACTORING</p>
+	  </aside>
+	</section>
+	
+	<section>
+	  <aside class="notes">
+	    <p>Defining interfaces in XML, then letting JavaFX inflate
+	    them</p>
+	  </aside>
+	</section>
 
+	
+	<section>
+	  <aside class="notes">
+	    <p>Pourquoi refactorer ?</p>
+	    <ul>
+	      <li>Respecter le principe MVC</li>
+	      <li>Alleger le code source</li>
+	      <li>Laisser JavaFX faire plus de truc pour nous (Le code
+	      d'autruit est le meilleurs)</li>
+	    </ul>
+	  </aside>
+	</section>
 
+	<section>
+	  <aside class="notes">
+	    <p>Gagné :</p>
+	    <ul>
+	      <li>Constructeur moins long</li>
+	      <li>Comportement en methode</li>
+	      <li>Initialisation et mise en page : FXML</li>
+	    </ul>
+	    <p>Ai fait une partie du refactoring</p>
+	  </aside>
+	</section>
+	
       </div>
     </div>
   </body>
