Customization Panel explique

--- a/index.html
+++ b/index.html
@@ -354,6 +354,27 @@
 	    <p>Ai fait une partie du refactoring</p>
 	  </aside>
 	</section>
+
+	<!-- Customization du diagramme -->
+	<section>
+	  <aside class="notes">
+	    <p>Donner possibilité aux geochronologiste de
+	    personnaliser le schema</p>
+	    <p>Why ?</p>
+	    <ul>
+	      <li>Donner plusieurs manières de visualiser les
+	      mêmes données</li>
+	      <li>Adapter au style publication</li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <!-- Custom Panel -->
+	  <aside class="notes">
+	    <p>Commente la fenetre</p>
+	  </aside>
+	</section>
 	
       </div>
     </div>
