Analyse : Technique explique

--- a/index.html
+++ b/index.html
@@ -376,6 +376,77 @@
 	  </aside>
 	</section>
 	
+	<!-- Analyse du retour sur experience -->
+	<section>
+	  <aside class="notes">
+	    <p>3 categories :</p>
+	    <ul>
+	      <li>Technique</li>
+	      <li>Culture générale</li>
+	      <li>Organisationel</li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<!-- Technique -->
+	<section>
+	  <aside class="notes">
+	    <p>Librarie JavaFX</p>
+	    <ul>
+	      <li>Rapide, puissante</li>
+	      <li>Nouveaux concepts interessant/pratique : 
+	      Propriete, Hierarchie des noeuds, FXML</li>
+	      <li>Reproches : Documentation faible, bugs de jeunesse et systeme de graph</li>
+	      <li>Reutilisation certaine</li>
+	    </ul>
+	  </aside>
+	</section>
+	
+	<section>
+	  <aside class="notes">
+	  <p>Java, les fonction lambda et la programmation fonctionelle</p>
+	  <p>Lambda = nouvelle façon d'instancier une interface à une seule fonction => Code plus clair</p>
+	  <p>Vient de la Programmation Fonctionelle. Etranger à Java. Mais envie apprendre Haskell</p>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Autres :</p>
+	    <ul>
+	      <li>SVG</li>
+	      <li>Maven (Test, compilation automatique, multiple cible)</li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Mon préféré : GIT (Conçu pour maintenir Linux à l'origine)</p>
+	    <p>System de versionnage. Ce que j'ai appris :</p>
+	    <ul>
+	      <li>Travailler avec des branches (Chaque branche a un role en particulier</li>
+	      <li>Differentes manieres de communiquer (Pull Request | Push) (Complexité)</li>
+	    </ul>
+	    <p>Git utilisé pour mes projets personnel</p>
+	  </aside>
+	</section>
+	
+	<section>
+	  <aside class="notes">
+	    <p>Github! (3.5 millions d'utilisateurs | 10 millions de projets)</p>
+	    <p>Site web construit autour de Git</p>
+	    <p>Fourni :</p>
+	    <ul>
+	      <li>Depot git</li>
+	      <li>Issue Tracker (très lié au code)</li>
+	      <li>Wiki</li>
+	      <li>Releases</li>
+	    </ul>
+	  </aside>
+	</section>
+
+
       </div>
     </div>
   </body>
