Analyse : Organisation explique

--- a/index.html
+++ b/index.html
@@ -445,6 +445,49 @@
 	    </ul>
 	  </aside>
 	</section>
+	
+	<!-- Organisation -->
+	<section>
+	  <aside class="notes">
+	    <p>Organisation avec Github</p>
+	    <ul>
+	      <li>Code sur internet | Merge sur Internet</li>
+	      <li>Issue Tracker : 
+		<ul>
+		  <li>Guider le travail (actuel et futur)[Evolution dynamique]</li>
+		  <li>Discuter avec les utilisateurs</li>
+		  <li>Implementé dans le code et fermé directement depuis comit</li>
+		</ul>
+	      </li>
+	      <li>Wiki et readme.md : Utile pour communiquer avec les utilisateurs</li>
+	    </ul>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	    <p>Suivre un projet à plusieurs vitesse</p>
+	    <ul>
+	      <li>Nouvelle librairie</li>
+	      <li>Petites fonctions à implementer</li>
+	    </ul>
+	    <p>Repartition de hommes et du temps. Recheche de solution.</p>
+	  </aside>
+	</section>
+
+	<section>
+	  <aside class="notes">
+	  <p>Vitesse de codage : Periodes très intenses | Periode marathon | Periode lente</p>
+	  <p>Appris à gêrer</p>
+	  </aside>
+	</section>
+	
+	<section>
+	  <aside class="notes">
+	    <p>Doc + test c'est dur</p>
+	    <p>Accepter de perdres du temps</p>
+	  </aside>
+	</section>
 
 
       </div>
