Correction d'une erreur

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		</ul>
 	      </li>
 	      <li>
-		Fpnction majeure :
+		Fonction majeure :
 		Après :
 		<ul>
 		  <li>Convertion en FXML</li>
