Presentation de l'introduction

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@ window.onload = function(){
     <div class="reveal">
       <div class="slides">
         <section>
+          <h1>Kickstarting Topsoil</h1>
+          <p>Cr&#xE9;ation d'un outil de trac&#xE9; de sch&#xE9;mas pour g&#xE9;ochronologistes</p>
+        </section>
+        <section>
+          <h2>Sommaire</h2>
+          <ol>
+            <li>Introduction</li>
+            <li>Pr&#xE9;sentation du projet</li>
+            <li>Ma contribution au projet</li>
+            <li>Retour sur l'experience</li>
+          </ol>
           <aside class="notes">
             <p>Sommaire</p>
           </aside>
