Mise en page de l'introduction

--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@ window.onload = function(){
         </section>
         <!-- Introduction -->
         <section>
+          <section>
+            <img src="images/calendrier.png" alt="Un calendrier"/>
+          </section>
+          <section>
+            <img src="images/calendrier_vie.png" alt="Un calendrier"/>
+          </section>
+          <section>
+            <img src="images/calendrier_animal.png" alt="Un calendrier"/>
+          </section>
+          <section>
+            <img src="images/calendrier_humain.png" alt="Un calendrier"/>
+          </section>
+          <section>
+            <p>Le travail des g&#xE9;ochronologistes est de determiner l'&#xE2;ge d'objets terrestres</p>
+          </section>
           <aside class="notes">
             <ul>
               <li>Calendrier</li>
@@ -58,15 +73,17 @@ window.onload = function(){
                   <li>Apparitions des animaux : 8 novembre</li>
                   <li>Apparition des premiers humano&#xEF;de : 31 d&#xE9;cembre a midi</li>
                   <li>Deux guerres mondiales : Derni&#xE8;re seconde</li>
+                  <li>Travail des g&#xE9;ochronologistes : determiner l'&#xE2;ge d'objets terrestres</li>
                 </ul>
               </li>
             </ul>
           </aside>
         </section>
         <section>
+          <h2>Le stage</h2>
+          <img src="images/stage.png" alt="Description de mon stage"/>
           <aside class="notes">
             <ul>
-              <li>Travail des g&#xE9;ochronologistes : determiner l'&#xE2;ge d'objets terrestres</li>
               <li>Projet Topsoil : G&#xE9;n&#xE8;rer des sch&#xE9;mas pour g&#xE9;ochronologistes</li>
               <li>Laboratoire CIRDLES</li>
               <li>12 avril =&gt; Aujourd'hui</li>
