Presentation de la partie sujet

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ window.onload = function(){
         </section>
         <!-- Explication du contexte -->
         <section>
+          <img src="images/volcan.png"/>
           <aside class="notes">
             <ul>
               <li>Eruption de volcan.</li>
@@ -104,6 +105,7 @@ window.onload = function(){
           </aside>
         </section>
         <section>
+          <img src="images/zircon_uranium.png"/>
           <aside class="notes">
             <p>Zircon :</p>
             <ul>
@@ -113,6 +115,7 @@ window.onload = function(){
           </aside>
         </section>
         <section>
+          <img src="images/zircon_uraniumplomb.png"/>
           <aside class="notes">
             <p>Temps passe</p>
             <ul>
@@ -122,12 +125,14 @@ window.onload = function(){
           </aside>
         </section>
         <section>
+          <img src="images/zircon_tauxuranium.png" alt="Le taux d'uranium permet de determiner la date"/>
           <aside class="notes">
             <p>Scientifiques deterrent les zircons. calculent le rapport entre plomb et uranium.</p>
             <p>=&gt; AGE DE LA COUCHE TERRESTRE</p>
           </aside>
         </section>
         <section>
+          <h1>Projet Topsoil</h1>
           <aside class="notes">
             <p>Topsoil :</p>
             <ul>
@@ -146,6 +151,7 @@ window.onload = function(){
           </aside>
         </section>
         <section>
+          <img src="images/graphique.png" alt="Un exemple de graphique"/>
           <aside class="notes">
             <p>Pour l'instant, permet de tracer CE genre de schema</p>
             <ul>
@@ -155,6 +161,7 @@ window.onload = function(){
           </aside>
         </section>
         <section>
+          <img src="images/explication_ellipse.png" alt="Un ellipse est une zone o&#xF9; la valeur qu'elle repr&#xE9;sente peut &#xEA;tre"/>
           <aside class="notes">
             <p>Un ellipse</p>
             <ul>
@@ -166,6 +173,7 @@ window.onload = function(){
           </aside>
         </section>
         <section>
+          <img src="images/graphique_concordia.png" alt="Un graphique avec la ligne concordia"/>
           <aside class="notes">
             <p>Ligne concordia</p>
             <ul>
@@ -175,6 +183,138 @@ window.onload = function(){
           </aside>
         </section>
         <section>
+          <table>
+            <thead>
+              <tr>
+                <th>207Pb*/235U</th>
+                <th>&#xB1;2&#x3C3; (%)</th>
+                <th>206Pb*/238U</th>
+                <th>&#xB1;2&#x3C3; (%)</th>
+                <th>corr coef</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>29.165688743</td>
+                <td>1.519417676</td>
+                <td>0.712165893</td>
+                <td>1.395116767</td>
+                <td>0.918191745</td>
+              </tr>
+              <tr>
+                <td>29.031535970</td>
+                <td>1.799945600</td>
+                <td>0.714916493</td>
+                <td>1.647075269</td>
+                <td>0.915069472</td>
+              </tr>
+              <tr>
+                <td>29.002008069</td>
+                <td>1.441943510</td>
+                <td>0.709482828</td>
+                <td>1.324922704</td>
+                <td>0.918845083</td>
+              </tr>
+              <tr>
+                <td>29.203969765</td>
+                <td>1.320690194</td>
+                <td>0.707078490</td>
+                <td>1.216231698</td>
+                <td>0.920906132</td>
+              </tr>
+              <tr>
+                <td>29.194452092</td>
+                <td>1.359029744</td>
+                <td>0.709615006</td>
+                <td>1.248057588</td>
+                <td>0.918344571</td>
+              </tr>
+              <tr>
+                <td>29.293320455</td>
+                <td>1.424328137</td>
+                <td>0.710934267</td>
+                <td>1.309135282</td>
+                <td>0.919124777</td>
+              </tr>
+              <tr>
+                <td>28.497489852</td>
+                <td>1.353243890</td>
+                <td>0.686951820</td>
+                <td>1.245648095</td>
+                <td>0.920490463</td>
+              </tr>
+              <tr>
+                <td>29.218573677</td>
+                <td>1.383868032</td>
+                <td>0.715702180</td>
+                <td>1.271276031</td>
+                <td>0.918639641</td>
+              </tr>
+              <tr>
+                <td>28.884872020</td>
+                <td>1.264304654</td>
+                <td>0.702153693</td>
+                <td>1.164978444</td>
+                <td>0.921438073</td>
+              </tr>
+              <tr>
+                <td>28.863259209</td>
+                <td>1.455550200</td>
+                <td>0.700081472</td>
+                <td>1.335582301</td>
+                <td>0.917579003</td>
+              </tr>
+              <tr>
+                <td>29.014325453</td>
+                <td>1.614480021</td>
+                <td>0.701464404</td>
+                <td>1.478394505</td>
+                <td>0.915709384</td>
+              </tr>
+              <tr>
+                <td>29.917885787</td>
+                <td>1.564622589</td>
+                <td>0.725185047</td>
+                <td>1.434906094</td>
+                <td>0.917094067</td>
+              </tr>
+              <tr>
+                <td>30.159907714</td>
+                <td>1.488528691</td>
+                <td>0.724886106</td>
+                <td>1.366282212</td>
+                <td>0.917874287</td>
+              </tr>
+              <tr>
+                <td>28.963153308</td>
+                <td>1.480754780</td>
+                <td>0.698240706</td>
+                <td>1.359750830</td>
+                <td>0.918282249</td>
+              </tr>
+              <tr>
+                <td>29.350104553</td>
+                <td>1.513999270</td>
+                <td>0.711983592</td>
+                <td>1.384417989</td>
+                <td>0.914411266</td>
+              </tr>
+              <tr>
+                <td>29.979576581</td>
+                <td>1.595745814</td>
+                <td>0.724426340</td>
+                <td>1.458894294</td>
+                <td>0.914239775</td>
+              </tr>
+              <tr>
+                <td>29.344673618</td>
+                <td>1.551935035</td>
+                <td>0.714166474</td>
+                <td>1.420060290</td>
+                <td>0.915025602</td>
+              </tr>
+            </tbody>
+          </table>
           <aside class="notes">
             <p>Afin de produire ce genre de graphique, on a besoin de ce genre de tableaux</p>
           </aside>
