Planning et ColumnSelectorView presente

--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@ window.onload = function(){
         </section>
         <!-- Planning -->
         <section>
+          <img src="images/deroulementstage.png" alt="Deroulement du stage"/>
           <aside class="notes">
             <ul>
               <li>Pas de planning en particulier. Methode agile</li>
@@ -346,6 +347,7 @@ Avant :</p>
         <!--Fonctionnalités -->
         <!-- Column Selector View -->
         <section>
+          <img src="images/columnselectorview.png" alt="Un Column Selector View"/>
           <aside class="notes">
             <h1>Le ColumnSelectorView</h1>
             <ul>
@@ -355,6 +357,7 @@ Avant :</p>
           </aside>
         </section>
         <section>
+          <img src="images/fonctionnementgraphique.png" alt="Un graphique passe des records &#xE0; un graphique. Ceux-ci se retrouvent convertis par un Converter en ErrorEllipse"/>
           <aside class="notes">
             <p>Comment est-ce que le columnselectordialog dit au graphique &#xE0; quelle colonnes correspondent &#xE0; quelles donn&#xE9;es</p>
             <ul>
@@ -366,12 +369,16 @@ Avant :</p>
           </aside>
         </section>
         <section>
+          <img src="images/csv_previousfonction.png" alt="Le fonctionnement pr&#xE9;c&#xE9;dant du Column Selector View. Il n'a la responsabilit&#xE9; que de choisir les colonnes"/>
           <aside class="notes">
             <p>Au depart j'avais con&#xE7;u une interface qui donnait la possibilit&#xE9; &#xE0; n'importe quel objet de generer un graphique</p>
             <p>Classe adopt&#xE9;e par le tableau</p>
           </aside>
         </section>
         <section>
+          <p>La librairie <strong>ControlsFX</strong> integre des nouveaux &#xE9;l&#xE9;lments d'interface graphique ainsi que le principe d'<em>actions</em>.</p>
+          <p>Une <strong>action</strong> est un objet qui r&#xE9;alise une action en r&#xE9;action &#xE0; un signal d'un utilisateur.</p>
+          <p>Elle sont parfaitement integr&#xE9;es dans chaques &#xE9;l&#xE9;ments d'interface de <em>ControlsFX</em>.</p>
           <aside class="notes">
             <!-- Illustration sur comment un action se transforme en bouton -->
             <ul>
@@ -382,6 +389,7 @@ Avant :</p>
           </aside>
         </section>
         <section>
+          <img src="images/csv_currentfunction.png" alt="Le nouveau fonctionement du ColumnSelectorView"/>
           <aside class="notes">
             <ul>
               <li>CSV transform&#xE9; en dialog</li>
