Customisation Panel presente

--- a/index.html
+++ b/index.html
@@ -537,6 +537,8 @@ class SimplePane extends VBox{
         </section>
         <!-- Customization du diagramme -->
         <section>
+          <h2>Customization Panel</h2>
+          <p>Donner aux g&#xE9;ochronologistes la possibilit&#xE9; de personnaliser les diagrammes pour qu'ils s'integrent parfaitement &#xE0; leur pr&#xE9;sentations</p>
           <aside class="notes">
             <p>Donner possibilit&#xE9; aux geochronologiste de personnaliser le schema</p>
             <p>Why ?</p>
@@ -547,6 +549,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
+          <img src="images/customizationpanel.png" alt="Une image du panneau de customisation"/>
           <!-- Custom Panel -->
           <aside class="notes">
             <p>Commente la fenetre</p>
