Presentation des apports et des apports technique

--- a/index.html
+++ b/index.html
@@ -557,6 +557,12 @@ class SimplePane extends VBox{
         </section>
         <!-- Analyse du retour sur experience -->
         <section>
+          <h2>Retour<em>s</em> sur experience</h2>
+          <ul>
+            <li>Technique</li>
+            <li>Culture g&#xE9;n&#xE9;rale</li>
+            <li>Organisationel</li>
+          </ul>
           <aside class="notes">
             <p>3 categories :</p>
             <ul>
@@ -568,6 +574,8 @@ class SimplePane extends VBox{
         </section>
         <!-- Technique -->
         <section>
+          <h3>JavaFX</h3>
+          <p>Une excelente, mais encore un peu jeune, librairie graphique</p>
           <aside class="notes">
             <p>Librarie JavaFX</p>
             <ul>
@@ -579,6 +587,8 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
+          <h3>Java 8 et les fonctions lambdas</h3>
+          <p>Une introduction &#xE0; la programmation fonctionelle</p>
           <aside class="notes">
             <p>Java, les fonction lambda et la programmation fonctionelle</p>
             <p>Lambda = nouvelle fa&#xE7;on d'instancier une interface &#xE0; une seule fonction =&gt; Code plus clair</p>
@@ -586,6 +596,11 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
+          <h3>Autres apports techniques</h3>
+          <ul>
+            <li>SVG</li>
+            <li>Maven</li>
+          </ul>
           <aside class="notes">
             <p>Autres :</p>
             <ul>
@@ -595,6 +610,14 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
+          <q>Attendez, une derni&#xE8;re chose...</q>
+          <p>
+            <small>- Steve Jobs</small>
+          </p>
+        </section>
+        <section>
+          <h3>Git !</h3>
+          <p>Un des meilleurs syst&#xE8;mes de versionnage de fichier au monde !</p>
           <aside class="notes">
             <p>Mon pr&#xE9;f&#xE9;r&#xE9; : GIT (Con&#xE7;u pour maintenir Linux &#xE0; l'origine)</p>
             <p>System de versionnage. Ce que j'ai appris :</p>
@@ -606,6 +629,8 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
+          <h3>GitHub !</h3>
+          <p>Une des meilleurs site web de collaboration entre developpeurs (et autres) bas&#xE9; sur Git</p>
           <aside class="notes">
             <p>Github! (3.5 millions d'utilisateurs | 10 millions de projets)</p>
             <p>Site web construit autour de Git</p>
