Presentation de organisation part I

--- a/index.html
+++ b/index.html
@@ -645,6 +645,8 @@ class SimplePane extends VBox{
         </section>
         <!-- Organisation -->
         <section>
+          <h3>GitHub : Un precieux outil d'organisation pour l'&#xE9;quipe</h3>
+          <img src="images/issuetracker_github.png" alt="Description de l'issue tracker. Il permet de creer ce que l'on appelle des issues, d'en discuter avec les utilisateurs, de les referencer dans les commits o&#xF9; l'on fait des modifications les concernant. De cette fa&#xE7;on on suit l'avancement du projet"/>
           <aside class="notes">
             <p>Organisation avec Github</p>
             <ul>
@@ -662,6 +664,8 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
+          <h3>R&#xE9;aliser plusieurs t&#xE2;ches dans un projet</h3>
+          <p>Le besoin de d&#xE9;velopper &#xE0; plusieurs vitesses.</p>
           <aside class="notes">
             <p>Suivre un projet &#xE0; plusieurs vitesse</p>
             <ul>
@@ -672,12 +676,20 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
+          <h3>G&#xEA;rer plusieurs intensit&#xE9;s de developpement</h3>
+          <ul>
+            <li>Periodes intenses</li>
+            <li>Periodes marathons</li>
+          </ul>
           <aside class="notes">
             <p>Vitesse de codage : Periodes tr&#xE8;s intenses | Periode marathon | Periode lente</p>
             <p>Appris &#xE0; g&#xEA;rer</p>
+            <p>ADHD</p>
           </aside>
         </section>
         <section>
+          <h3>Documentation et tests</h3>
+          <p>Une question de volont&#xE9;</p>
           <aside class="notes">
             <p>Doc + test c'est dur</p>
             <p>Accepter de perdres du temps</p>
