--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ window.onload = function(){
 	Reveal.initialize({history: true,
 			center: true,
 			width:1920,
+transition:'linear',
 			height : 1080});
 }
 </script>
